--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,119 @@
-body {
-    background-color: #3BBAA7;
-}
-
-#main{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#image {
-    display: block;
-    width: 55vw;
-    height: 75vh;
-    background: url("/static/imgs/portfolio.jpg"), left;
-    background-size: cover;
-    margin-top: 80px;
-    margin-left: 60px;
-    margin-right: 30px;
-}
+/* Fonts */
 
 
 h1, h2, h3, h4, a, button, th, text, p{
     color: #000000;
     font-family: 'Montserrat', sans-serif;
 }
+
+h1 {
+    font-size: 2em;
+    padding-bottom: 5px;
+}
+
+p {
+    font-size: 1.2em;
+    padding-bottom: 5px;
+    padding-left: 5px;
+}
+
+
+/* Index Styling */
+
+
+body {
+    overflow-x: hidden;
+}
+
+#wrapper {
+    display: flex;
+    background-color: #3BBAA7;
+    align-items: stretch;
+    min-width: 100vw;
+    max-width: 100vw;
+    min-height: 100vh;
+    max-height: 100vh;;
+}
+
+#content {
+    width: 90%;
+}
+
+#sidebar {
+    transition: ease .6s;
+    width: 45px;
+    background-color: #3ab19e;
+    opacity: 0.9;
+    position: absolute;
+    right: 0;
+    min-height: 100vh;
+}
+
+#sidebar:hover {
+    transition: ease .6s;
+    width: 170px;
+}
+
+.navbar-brand {
+    width: 170px;
+    text-align: right;
+}
+
+
+.nav-container {
+    display: flex;
+    flex-direction: column;
+}
+
+ul li a {
+    width: 170px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: right;
+}
+#sidebar span {
+    padding-right: 15px;
+    float: left;
+}
+
+
+
+/* Landing Content */
+#main{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+}
+#main  h1 {
+    text-align: right;
+}
+
+img {
+    height: 75vh;
+    width: 70vw;
+    margin: 0 2vw 0 4vw;
+    margin-top: 9vh;
+
+
+}
+
+#landing {
+    padding-right: 7vw;
+    padding-top: 8vh;
+}
+
+#button {
+    display: flex;
+    justify-content: center;
+    margin-top: 2vh;
+}
+button.btn {
+    background-color: #F7CB80;
+}
+button:first-child {
+    margin-right: 10px;
+}
+
+
