--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,38 @@
 
     <link rel="stylesheet" href= {% static "css/reset.css" %}>
     <link rel="stylesheet" href= {% static "css/style.css" %}>
+
+
+    <script src="/static/lib/js/jquery.min.js"></script>
+    <script src="/static/lib/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
-{% block content %}
+    <div id="wrapper">
 
-{% endblock %}
+        <div id="content" class="container">
+
+            {% block content %}
+
+
+            {% endblock %}
+        </div>
+
+        <nav id="sidebar">+
+
+            <div class="nav-container">
+
+                <h1 class="navbar-brand">Exp Builder</h1>
+                <ul class="nav">
+                    <li><a><span class="glyphicon glyphicon-home"></span>Home</a></li>
+                    <li><a href="/signup/"><span class="glyphicon glyphicon-envelope"></span>Register</a></li>
+                    <li><a><span class="glyphicon glyphicon-user"></span>Login</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
 </body>
+
 </html>
