--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,11 @@
             <div id="landing" class="col-sm-4">
 
                 {% block landing %}
+
                 {% endblock %}
+
+            </div>
+
             </div>
         </div>
 {% endblock %}
