--- a/templates/index.html
+++ b/templates/index.html
@@ -29,15 +29,21 @@
             {% endblock %}
         </div>
 
-        <nav id="sidebar">+
+        <nav id="sidebar">
 
             <div class="nav-container">
 
                 <h1 class="navbar-brand">Exp Builder</h1>
                 <ul class="nav">
-                    <li><a><span class="glyphicon glyphicon-home"></span>Home</a></li>
-                    <li><a href="/signup/"><span class="glyphicon glyphicon-envelope"></span>Register</a></li>
-                    <li><a><span class="glyphicon glyphicon-user"></span>Login</a></li>
+                    <li><a href="/"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+
+                    {% if user.is_active %}
+                        <li><a href="/"><span class="glyphicon glyphicon-user"></span>Profile</a></li>
+                        <li><a href="/logout/"><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
+                    {% else %}
+                        <li><a href="/signup/"><span class="glyphicon glyphicon-envelope"></span>Register</a></li>
+                        <li><a href="/login/"><span class="glyphicon glyphicon-user"></span>Login</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
