basic job model working

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,7 +5,7 @@
     <h1>Need help on a project?</h1>
     <p>Help someone build their portfolio by posting a job!</p>
     <div id="button">
-        <button class="btn">Post a job</button>
+        <a href="/create/job/" class="btn">Post a job</a>
         <button class="btn">Job list</button>
     </div>
 
