--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
         <div id="main" class="row">
-            <img class="col-sm-8" src="/static/imgs/portfolio.jpg">
+            <img id='landingimg' class="col-sm-8" src="/static/imgs/portfolio.jpg">
 
             <div id="landing" class="col-sm-4">
 
