--- a/templates/jobs/forms/jobpostform.html
+++ b/templates/jobs/forms/jobpostform.html
@@ -1,11 +1,17 @@
 {% extends 'home.html' %}
+
+    {% block head_js %}
+        $(document).ready(function() {
+            $('.has-popover').popover({'trigger':'hover'});
+        });
+    {% endblock %}
+
     {% block landing %}
         {% load bootstrap_tags %}
         <h1 id="signup-h">Create job</h1>
         <form method="post">
             {% csrf_token %}
             {{ form | as_bootstrap }}
-
-        <button  id="signup" class="btn" type="submit">Register</button>
+        <button id="signup" class="btn" type="submit">Submit</button>
         </form>
     {% endblock %}
