--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,8 +5,8 @@
     <h1>Need help on a project?</h1>
     <p>Help someone build their portfolio by posting a job!</p>
     <div id="button">
-        <a href="/create/job/" class="btn">Post a job</a>
-        <button class="btn">Job list</button>
+        <a href="/create/job/" class="btn mybutton">Post a job</a>
+        <a href="/joblist/" class="btn mybutton">Job list</a>
     </div>
 
 {% endblock %}
