--- a/templates/registration/profile-form.html
+++ b/templates/registration/profile-form.html
@@ -1,4 +1,12 @@
 {% extends 'home.html' %}
+
+
+    {% block head_js %}
+        $(document).ready(function() {
+            $('.has-popover').popover({'trigger':'hover'});
+        });
+    {% endblock %}
+
     {% block landing %}
         {% load bootstrap_tags %}
         <h1 id="signup-h">Sign Up Today</h1>
@@ -6,6 +14,6 @@
             {% csrf_token %}
             {{ form | as_bootstrap }}
 
-        <button  id="signup" class="btn" type="submit">Create</button>
+        <button  id="signup" class="btn mybutton" type="submit">Create</button>
         </form>
     {% endblock %}
