--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
+    <div class="header" style="position: absolute">
+        <span class="glyphicon glyphicon-home"></span>
+        <h1>Home</h1>
+    </div>
+
         <div id="main" class="row">
             <img id='landingimg' class="col-sm-8" src="/static/imgs/portfolio.jpg">
 
